@@ -1,7 +1,7 @@
 #/*! \page config_macros Default configuration: @RPMCONFIGDIR@/macros
 # \verbatim
 #
-# $Id: macros.in,v 1.132 2002/12/15 18:30:45 jbj Exp $
+# $Id: macros.in,v 1.133 2002/12/17 19:22:15 jbj Exp $
 #
 # This is a global RPM configuration file. All changes made here will
 # be lost when the rpm package is upgraded. Any per-system configuration
@@ -445,8 +445,8 @@ package or when debugging this package.\
 #				mp_mmapsize=8Mb mp_size=512Kb
 
 # Use a CDB database model for concurrent access.
-# XXX "private" cdb locks for legacy interoperation transiting to glibc+nptl
-%__dbi_cdb			create private cdb mpool mp_mmapsize=16Mb mp_size=1Mb
+# XXX Add "private" here for legacy interoperation transiting to glibc+nptl.
+%__dbi_cdb			create cdb mpool mp_mmapsize=16Mb mp_size=1Mb
 
 %__dbi_other			%{?_tmppath:tmpdir=%{_tmppath}} %{?__dbi_cdb}
 
@@ -491,9 +491,7 @@ package or when debugging this package.\
 %_dbi_tags	Packages:Name:Basenames:Group:Requirename:Providename:Conflictname:Triggername:Dirnames:Requireversion:Provideversion:Installtid:Sigmd5:Sha1header:Filemd5s:Depends:Pubkeys
 
 # "Packages" should have shared/exclusive fcntl(2) lock using "lockdbfd".
-# XXX disable legacy fcntl lock until glibc+nptl fixes fcntl
-#%_dbi_config_Packages		%{_dbi_htconfig} lockdbfd
-%_dbi_config_Packages		%{_dbi_htconfig}
+%_dbi_config_Packages		%{_dbi_htconfig} lockdbfd
 
 # "Depends" is a per-transaction cache of known dependency resolutions.
 %_dbi_config_Depends		%{_dbi_htconfig} temporary private
